...
@Composable
fun OrdersView(component: OrdersComponent) {
    KarikaScaffold(
        containerColor = KarikaColors.White,
        contentWindowInsets = WindowInsets.systemBars,
        topBar = {
            TopBarWithBack("Moje narudžbe") {
                component.appBack()
            }
        },
        component = component
    ) {
        Column(
...
        }
    }
}

@Composable
private fun FilterView(component: OrdersComponent) {
    val statusSort = mutableStateOf("Sve").asState()
    val dateSort = mutableStateOf("Najnovije").asState()

    Row(
        modifier = Modifier,
        verticalAlignment = Alignment.CenterVertically,
        horizontalArrangement = Arrangement.spacedBy(16.dp)
...
            modifier = Modifier
                .weight(1f),
            value = statusSort,
            values = mutableStateOf(
                listOf(
                    Pair("Sve", KarikaColors.Gray2),
                    Pair("Na čekanju", KarikaColors.Blue),
                    Pair("Odobrena", KarikaColors.Green3),
                    Pair("Otkazana", KarikaColors.Gray2),
                    Pair("Odbijena", KarikaColors.Red),
                    Pair("Čekanje na uplatu", KarikaColors.Orange),
                    Pair("Uplaćena", KarikaColors.Orange)
                )
            ).asState()
        ) {
...
                        fontWeight = FontWeight.W600
                    )
                }
            }
            YSpacer16()
            HorizontalButtons(
                primaryTitle = "Naruči ponovo",
                secondaryTitle = "Vidi narudžbu"
            ) {
                if (it == "Vidi narudžbu") {
                    component.navigateDetails(order)
                    return@HorizontalButtons
                }

...
                        .onClick {
                            if (!order.canceled()) {
                                cancelModal.value = order
                            }
                        }
                        .weight(1f),
                    text = "Otkaži narudžbu",
                    fontWeight = FontWeight.W600,
                    color = if (order.canceled()) KarikaColors.Divider else KarikaColors.Primary,
                    textSize = 16.sp,
                    textAlign = TextAlign.Center
                )
                KarikaText(
...
