...
    ) {
        Column(
            modifier = Modifier
                .fillMaxWidth()
        ) {
            KarikaRadioButton(
                title = "Dodaj novu adresu",
                selected = newAddress.value
            ) {
                newAddress.value = true
                selectedAddress.value = ""
            }
            if (newAddress.value) {
...
    ) {
        KarikaText(
            modifier = Modifier
                .weight(1f)
                .padding(start = 16.dp),
            color = KarikaColors.Black,
            text = "Informacije za dostavu:",
            fontWeight = FontWeight.W700,
            textSize = 20.sp
        )
        KarikaText(
            modifier = Modifier
                .onClick {
                    component.mainBack()
                }
                .padding(end = 16.dp),
            color = KarikaColors.Primary,
            text = "Odustani",
            fontWeight = FontWeight.W600,
            textSize = 16.sp
        )
    }
}

...
    )
    PrimaryButtonFilled(
        modifier = Modifier
            .height(48.dp)
            .padding(horizontal = 16.dp)
            .fillMaxWidth(),
        title = if (newAddress.value) "Spasi i nastavi dalje" else "Završi narudžbu",
        fontWeight = FontWeight.W700,
        textSize = 18.sp,
        enabled = if (newAddress.value) component.validateNewAddress() else true
    ) {
        component.handleShippingAddress()
    }
...
