...
            painter = painterResource(Res.drawable.ic_success),
            contentDescription = ""
        )
        KarikaText(
            modifier = Modifier,
            color = KarikaColors.Black,
            text = "Vaš zahtjev za narudžbu je uspješno poslan dobavljačima.",
            fontWeight = FontWeight.W700,
            textSize = 22.sp,
            textAlign = TextAlign.Center
        )
        KarikaText(
            modifier = Modifier,
...
            textAlign = TextAlign.Center
        )
        PrimaryButtonFilled(
            modifier = Modifier
                .height(48.dp)
                .padding(horizontal = 16.dp),
            title = "Nastavi kupovati",
            fontWeight = FontWeight.W700,
            textSize = 18.sp
        ) {
            component.finish()
        }
    }
...
